src/objects/Search_Statistics__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channels__c</fullName>
        <label>Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clusters__c</fullName>
        <label>Clusters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Searched_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Searched By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WINatPOS_Search_Statistics_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Searched_in_Country__c</fullName>
        <label>Searched in Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Keyword</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Filter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>WINatPOS Search Statistics</label>
    <nameField>
        <label>Search Statistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WINatPOS Search Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>